loquor schema benz

--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -8,9 +8,11 @@
  Da \cite{benz2014planet}.}\label{fig:GFM}
 \end{wrapfigure}
 
-La struttura del disco protoplanetario determina la rapidit\'a di accrescimento degli embrioni planetari tramite la densit\'a di polvere influenzata a sua volta dalla posizione dell'iceline ($H_2O$): \'e possibile tenere traccia della frazione di roccie o ghiacci accrescuti. Le caratteristiche del disco influenzano la velocit\'a di migrazione degli embrioni.
+La struttura del disco protoplanetario determina la rapidit\'a di accrescimento degli embrioni planetari  principalmente tramite la densit\'a di polvere, influenzata a sua volta dalla posizione dell'iceline ($H_2O$): \'e possibile tenere traccia della frazione di rocce o ghiacci accrescuti. 
 
-La formazione di un inviluppo gassoso che inzialmente si raccorda alle condizioni del disco influenza la capacit\'a del pianeta di accrescere planetesimi e l'accrescimento di altro gas \'e regolato dalla velocit\'a di raffreddamento dell'embrione: raggiunta la massa critica per il collasso dell'inviluppo gassoso l'accrescimento \'e determinato dalla disponibilit\'a di gas del disco.
+Una volta che il core dell'embrione planetario \'e abbastanza massiccio si forma un inviluppo gassoso che inzialmente si raccorda alle condizioni del disco e alla saturazione della capacit\'a del disco di fornire gas si stacca dal disco: la struttura del pianeta \'e quindi determinata da massa, raggio e luminosit\'a del core, massa gassosa legata al pianeta, energia rialasciata da accrescimento planetesi e gas.
+
+La capacit\'a del pianeta di accrescere planetesimi aumenta con l'aumentare della massa del pianeta e del raggio
 
 \begin{errata}[atmosfera e luminosit\'a pianeta: discorsivo]
  Le condizioni in fondo all'atmosfera planetaria forniscono le condizioni di temperatura e pressione all'estremo dell'inviluppo gassoso. La struttura del disco determina anche il rate massimo di accrescimento del gas. Il rate d'accrescimento di solidi \'e determinato dalla sezione d'urto efficace, determinata dalla struttura dell'inviluppo gassoso, dalla densit\'a di solidi nel disco e dalla velocit\'a orbitale. La luminosit\'a del pianeta \'e determinata dal rate di accrescimento dei solidi e dal rate di contrazione del pianeta. Infine la migrazione \'e determinata dalla caretteristiche del disco e dalla massa del pianeta.
