--- a/functions.sty
+++ b/functions.sty
@@ -272,6 +272,7 @@
 \DeclareSIUnit\parsec{pc}
 \DeclareSIUnit\lightyear{ly}
 \DeclareSIUnit\year{yr}
+\DeclareSIUnit\astronomicalunit{AU}
 % Energy
 \DeclareSIUnit\erg{erg}
 \DeclareSIUnit\ev{ev}
