--- a/seminario.bib
+++ b/seminario.bib
@@ -199,6 +199,18 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{mordasini2009extrasolar,
+  title={Extrasolar planet population synthesis-I. Method, formation tracks, and mass-distance distribution},
+  author={Mordasini, Christoph and Alibert, Yann and Benz, Willy},
+  journal={Astronomy \& Astrophysics},
+  volume={501},
+  number={3},
+  pages={1139--1160},
+  year={2009},
+  publisher={EDP Sciences}
+}
+
+
 @article{howard2012planet,
   title={Planet occurrence within 0.25 AU of solar-type stars from Kepler},
   author={Howard, Andrew W and Marcy, Geoffrey W and Bryson, Stephen T and Jenkins, Jon M and Rowe, Jason F and Batalha, Natalie M and Borucki, William J and Koch, David G and Dunham, Edward W and Gautier III, Thomas N and others},
@@ -236,6 +248,16 @@ pages={1282},
   volume={29},
   pages={165--244},
   year={2008},
+  publisher={EDP Sciences}
+}
+
+@article{mordasini2014grain,
+  title={Grain opacity and the bulk composition of extrasolar planets-I. Results from scaling the ISM opacity},
+  author={Mordasini, C and Klahr, H and Alibert, Y and Miller, N and Henning, Th},
+  journal={Astronomy \& Astrophysics},
+  volume={566},
+  pages={A141},
+  year={2014},
   publisher={EDP Sciences}
 }
 
