--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -531,7 +531,7 @@ Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accre
 \chapter{Evoluzione struttura planetaria: accrescimento di gas.}\label{chap:gasaccretion}
 }% e fase isolata
 
-\begin{wrapfigure}[10]{0.5\textwidth}
+\begin{wrapfigure}[10]{l}{0.5\textwidth}
 \includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.95\textwidth]{massenvvscore}
 \caption{Massa planetaria in funzione della massa del core. Da \cite{alibert2005models}.}
 \end{wrapfigure}
