--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -225,7 +225,7 @@ I tre diagrammi \ref{fig:PMfreqs} mostrano la frequenza dei pianeti in delimitat
 \end{subfigure}
 \end{figure}
 
-\begin{wrapfigure}[5]{0.49\textwidth}
+\begin{wrapfigure}[5]{l}{0.49\textwidth}
 \centering \includegraphics[trim={0cm 8cm 0 0},clip, width=0.94\textwidth]{PfreqvsFeH}
 \caption{Numero di pianeti in funzione della metallicit\'a stellare: nero dei giganti gassosi, rosso dei pianeti con $M\leq30\mearth{}$ e blu combinata. Da \cite{mayor2011harps}.}\label{fig:PfreqvsFeH}
 \end{wrapfigure}
@@ -319,7 +319,7 @@ V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{equation}
 
 
-\begin{wrapfigure}[5]{0.49\textwidth}
+\begin{wrapfigure}[5]{l}{0.49\textwidth}
 \centering \includegraphics[trim={0cm 12cm 0 0},clip, width=0.94\textwidth]{MR-model-obs}
 \caption{Relazione massa-raggio determinata sulla base di modello planetario dopo \SI{5}{\giga\year}. Per gli esopianeti sono indicate le curve per temperature di equilibrio di \SI{1000}{\kelvin} e \SI{2500}{\kelvin}. Da \cite{guillot2014giant}.}\label{fig:MR-model-obs}
 \end{wrapfigure}
