Update on Overleaf.

--- a/appendice.tex
+++ b/appendice.tex
@@ -1,7 +1,7 @@
 \chapter{Interazione disco-pianeta}
 
-\begin{wrapfigure}[20]{l}{0.3\textwidth}
-\includegraphics[trim={0cm 11cm 0 0},clip, keepaspectratio, width=0.3\textwidth]{corotation}
+\begin{wrapfigure}[26]{l}{0.4\textwidth}
+\includegraphics[trim={0cm 11cm 0 0},clip, keepaspectratio, width=0.39\textwidth]{corotation}
 \caption{In alto: Orbite periodiche e librazione delle particelle di gas del disco. In basso: Asimmetrie tra gli U-turn che precedono/seguono il pianeta. Da \cite{armitage2007lecture}.}\label{fig:corotation}
 \end{wrapfigure}
 
@@ -129,6 +129,8 @@ $\dot{a}_p\propto v_g$: ??
 Veras armitage 04 (exoplanets with $a>20au$): outward migration seldom important, radius velocity reversal when type II migration occure $R_{mvc}$ is outside them.
 \end{workout}
 
+\vspace{2.5cm}
+
 \section{Migrazione tipo I: pianeti piccola massa - comportamento lineare.}
 
 \subsection{Risonanze di Lindblad}
@@ -229,7 +231,7 @@ Per pianeti massicci il trasporto viscoso di momento angolare non \'e abbastanza
 \subsection{Approssimazione impulsiva}
 
 %Lin papaloizou 79
-\begin{wrapfigure}[7]{l}{0.45\textwidth}
+\begin{wrapfigure}[10]{l}{0.45\textwidth}
 \includegraphics[width=0.45\textwidth]{impulseapprox}
 \caption{Schema approssimazione impulsiva.}\label{fig:impulseapprox}
 \end{wrapfigure}
