--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -531,8 +531,8 @@ Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accre
 \chapter{Evoluzione struttura planetaria: accrescimento di gas.}\label{chap:gasaccretion}
 }% e fase isolata
 
-\begin{wrapfigure}[10]{l}{0.5\textwidth}
-\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.95\textwidth]{massenvvscore}
+\begin{wrapfigure}[13]{l}{0.5\textwidth}
+\includegraphics[trim={0cm 2cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{massenvvscore}
 \caption{Massa planetaria in funzione della massa del core. Da \cite{alibert2005models}.}
 \end{wrapfigure}
 
@@ -543,6 +543,8 @@ Da modelli numerici risulta
 M_c^{crit}=10\mearth{}(\frac{\dot{M}_c}{\num{e-7}\mearth{}\si{\per\year}})\expy{q}(\frac{\kappa}{\SI{0.1}{\square\meter\per\kilo\gram}})\expy{s}
 \end{equation}
 con $q,s\approx0.2-0.3$ (\cite{ikoma2000formation}).
+
+\vspace{2cm}
 
 \section{Accrescimento limitato da velocit\'a di raffreddamento}
 
