--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -144,7 +144,7 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 \chapter{Caratteristiche della popolazione di esopianeti}
 }
 
-\begin{wrapfigure}[16]{l}{0.55\textwidth}
+\begin{wrapfigure}[16]{l}{0.5\textwidth}
 \includegraphics[trim={0cm 0 0 0},clip, width=0.5\textwidth]{obsMa}
 \caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018planetary}.}\label{fig:Maplot}
 \end{wrapfigure}
@@ -196,15 +196,16 @@ Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \e
 La probabilit\'a di rivelamento \'e determinata dall'ampiezza del moto radiale della stella attorno al centro di massa K, il rumore strumentale e stellare, la durata dell'osservazione e la forma dell'orbita.
 
 \begin{figure}[!ht]
-\begin{subfigure}[b]{0.32\textwidth}
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
 \includegraphics[trim={0cm 17cm 1cm 0},clip, width=0.99\textwidth]{PMfreq-e23}\label{fig:PMfreq-e23}
 \end{subfigure}
 ~
-\begin{subfigure}[b]{0.32\textwidth}
+\begin{subfigure}[b]{0.4\textwidth}
 \includegraphics[trim={0cm 10cm 0 0},clip, width=0.99\textwidth]{PMfreq-e12}\label{fig:PMfreq-e12}
-\end{subfigure}
-~
-\begin{subfigure}[b]{0.32\textwidth}
+\end{subfigure}%
+
+\begin{subfigure}[b]{0.4\textwidth}
 \includegraphics[trim={0cm 8cm 0 0},clip, width=0.99\textwidth]{PMfreq-short}\label{fig:PMfreq-short}
 \end{subfigure}
 \caption{Diagramma massa-periodo: frazione di stelle che ospitano pianeta con caratteristiche nella regione evidenziata. Da sinistra a destra: $P<10\si{\year}$ e $M>50\mearth{}$, $P<1\si{\year}$ e $M>3-100\mearth{}$, $P<50\si{\day}$ e $M=1-3/3-10/10-30/30-100/100-300/300-1000$. Da \cite{mayor2011harps}.}\label{fig:PMfreqs}
@@ -225,8 +226,8 @@ I tre diagrammi \ref{fig:PMfreqs} mostrano la frequenza dei pianeti in delimitat
 \end{subfigure}
 \end{figure}
 
-\begin{wrapfigure}[5]{l}{0.49\textwidth}
-\centering \includegraphics[trim={0cm 8cm 0 0},clip, width=0.94\textwidth]{PfreqvsFeH}
+\begin{wrapfigure}[10]{l}{0.45\textwidth}
+\centering \includegraphics[trim={0cm 8cm 0 0},clip, width=0.43\textwidth]{PfreqvsFeH}
 \caption{Numero di pianeti in funzione della metallicit\'a stellare: nero dei giganti gassosi, rosso dei pianeti con $M\leq30\mearth{}$ e blu combinata. Da \cite{mayor2011harps}.}\label{fig:PfreqvsFeH}
 \end{wrapfigure}
 
@@ -299,7 +300,7 @@ planet around metal rich star have higher e (dawson, murray-clay 13)
 smaller planets tend to have lower e (hogg 10 raccomanded modelling e distro on basis of Bayesian analysis)
 \end{workout}
 
-%\cleardoublepage
+\cleardoublepage
 
 \section{Popolazione esopianeti rilevati tramite transito}
 
@@ -319,8 +320,8 @@ V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{equation}
 
 
-\begin{wrapfigure}[5]{l}{0.49\textwidth}
-\centering \includegraphics[trim={0cm 12cm 0 0},clip, width=0.94\textwidth]{MR-model-obs}
+\begin{wrapfigure}[21]{l}{0.61\textwidth}
+\centering \includegraphics[trim={0cm 12cm 0 0},clip, width=0.6\textwidth]{MR-model-obs}
 \caption{Relazione massa-raggio determinata sulla base di modello planetario dopo \SI{5}{\giga\year}. Per gli esopianeti sono indicate le curve per temperature di equilibrio di \SI{1000}{\kelvin} e \SI{2500}{\kelvin}. Da \cite{guillot2014giant}.}\label{fig:MR-model-obs}
 \end{wrapfigure}
 
