--- a/seminario.bib
+++ b/seminario.bib
@@ -261,6 +261,17 @@ pages={1282},
   publisher={EDP Sciences}
 }
 
+@article{tsiganis2005origin,
+  title={Origin of the orbital architecture of the giant planets of the Solar System},
+  author={Tsiganis, Kleomeris and Gomes, R and Morbidelli, A and Levison, HF},
+  journal={Nature},
+  volume={435},
+  number={7041},
+  pages={459},
+  year={2005},
+  publisher={Nature Publishing Group}
+}
+
 @article{lodders2003solar,
   title={Solar system abundances and condensation temperatures of the elements},
   author={Lodders, Katharina},
