--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -54,7 +54,7 @@ $M_{H/He}$&$1.5\mearth{}$&$2.2\mearth{}$\\
     \caption{Composizione Giove, Saturno, Urano e Nettuno. Da \cite{baraffe2009physical}.}\label{tab:JSUNcomp}
 \end{table}
 
-Modelli pi\'u sofisticati impongono vincoli maggiori sulle condizioni iniziali: il modello di Nizza del sistema solare riproduce caratteristiche orbitali dei pianeti giganti considerando la loro migrazione in una distribuzione di planentesimi di $30-50\mearth{}$; la presenza di numerosa popolazione di planetesimi \'e corroborata dalla craterizzazionedei pianeti terrestri e corpi minori come dall'esistenza di numerosi oggetti di piccole dimensioni superstiti.
+Modelli pi\'u sofisticati impongono vincoli maggiori sulle condizioni iniziali: il modello di Nizza del sistema solare (\cite{tsiganis2005origin}) riproduce caratteristiche orbitali dei pianeti giganti considerando la loro migrazione in una distribuzione di planentesimi di $30-50\mearth{}$; la presenza di numerosa popolazione di planetesimi \'e corroborata dalla craterizzazionedei pianeti terrestri e corpi minori come dall'esistenza di numerosi oggetti di piccole dimensioni superstiti.
 
 \begin{workout}[Cosa dire dei modelli planetarii: core giganti gassosi: modelli planetari e raffronto isolation mass in MMSN]
 parte relativa ai momenti multipolo gravitazionale. 
