--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 %openany
 
 %% rimuove workout errata dalla versione da consegnare
-\def\versione{consegna}%%VERSIONE
+\def\versione{bozza}%%VERSIONE
 \def\bozza{bozza}
 \def\consegna{consegna}
 %%%PENALITIES
@@ -102,7 +102,9 @@
 Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi di formazione dei sistemi planetari tramite modelli di formazione globale: 
 I modelli di formazione planetaria fino alla scoperta del primo esopianeta (Queloz 1995) erano vincolati a riprodurre le caratteristiche peculiari del sistema
 \end{errata}
-La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata determinata dalla conoscenza delle caratteristiche orbitali, della composizione chimica dei corpi del sistema solare (\cite{lissauer1993planet}). A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno portato individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono stata sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari.
+La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata determinata dalla conoscenza dell'architettura orbitale del sistema solare e della composizione chimica solare, dei pianeti e dei corpi minori.
+% (\cite{lissauer1993planet}).
+A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono stata sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari.
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Vincoli ai modelli di formazione planetaria}
