--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -173,6 +173,7 @@ tab.1: occurrence and architecture exoplanetary system
 \end{workout}
 
 \section{Popolazione esopianeti rilevati tramite RV}
+
 Considero il moto stellare attorno al centro di massa del sistem stella pianeta:
 se l'asse z \'e lungo la linea di vista la posizione della stella \'e $z=r(t)\sin{i}\sin{(\omega+\nu)}$ e per la velocit\'a radiale:
 \begin{equation}
@@ -215,7 +216,7 @@ La probabilit\'a di rivelamento \'e determinata dall'ampiezza del moto radiale d
 mayor 11 fig 1
 \end{workout}
 
-I tre diagrammi \ref{fig:PMfreqs} mostrano la frequenza dei pianeti in delimitate regioni del diagramma periodo-massa ($P-M$)  ricavate da \cite{mayor2011harps} determinata utilizzando un sottocampione di stelle per cui la probabilit\'a di rivelazione relativa alla regione del diagramma $(P-M)$ \'e $99\%$: accanto alle linee continue nei diagrammi $(P,M)$ sono indicate le percentuali di stelle per cui \'e possibile ottenere una probabilit\'a di rivelamento del $99\%$.
+I tre diagrammi \ref{fig:PMfreqs} mostrano la frequenza dei pianeti in delimitate regioni del diagramma periodo-massa ($P-M$)  ricavate da \cite{mayor2011harps} determinata utilizzando un sottocampione di stelle per cui la probabilit\'a di rivelazione relativa alla regione del diagramma $(P-M)$ \'e $99\%$: accanto alle linee continue nei diagrammi $(P,M)$ sono indkicate le percentuali di stelle per cui \'e possibile ottenere una probabilit\'a di rivelamento del $99\%$.
 
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.49\textwidth} \centering \includegraphics[trim={0cm 5cm 0 0},clip, width=0.94\textwidth]{freqvsM}
@@ -314,7 +315,7 @@ La probabilit\'a che l'orbita di un pianeta sia allineata con l'osservatore in m
 &p=(\frac{R_*\pm R_p}{a})(\frac{1}{1-e^2})=0.005(\frac{R_*}{\rsun{}})(\frac{a}{1AU})\expy{-1}(\frac{1}{1-e^2})
 \end{align*}
 La maggiore probabilit\'a di transito per orbite eccentriche \'e compensata approssimativamente dalla minore durata del transito.
-Considerando un numero totale di osservazioni $N_o$ durante il transito si hanno $N_t\approx N_o\frac{R_*}{\pi a}$; il rapport segnale rumore \'e $S/N=\sqrt{N_t}\frac{\delta}{\sigma}$, $\sigma$ precisione fotometrica, $\sigma\propto\frac{1}{\sqrt{N_{ph}}}\propto d$. Per fissato S/N e tipo stellare il numero di pianeti rivelati varia come
+Considerando un numero totale di osservazioni $N_o$ durante il transito si hanno $N_t\approx N_o\frac{R_*}{\pi a}$; il rapport segnale rumore \'e $S/N=\sqrt{N_t}\frac{\delta}{\sigma}$, $\sigma$ precisione fotometrica e $\delta=(\frac{R_p}{R_*})^2$. Per $\sigma\propto\frac{1}{\sqrt{N_{ph}}}$ \'e $\sigma\propto d$. Per fissato S/N e tipo stellare il numero di pianeti rivelati varia come volume a cui \'e estesa la ricerca per probabilit\'a di transito:
 \begin{equation}
 V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{equation}
@@ -334,7 +335,7 @@ la relazione massa raggio \'e
 R\propto M\expy{(1-n)/(3-n)}
 \end{equation}
 per $M\approx\mjupiter$ $n\approx1$ quindi il raggio \'e approssimativamente costante. Questo fatto \'e visibile anche nella distribuzione dei raggi planetari (figura \subref{fig:Rfreq}) nel picco attorno a $\rjupiter$.
-La figura \subref{fig:RfreqPl100ub} mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$.
+La figura \subref{fig:RfreqPl100ub} mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$: i pianeti terrestri sono rocciosi con atmosfera di H/He che non contribuisce alle dimensione mentre i pianeti nettuniani hanno strato di gas consistente rispetto alla massa del pianeta.
 
 \begin{errata}[Equazione di stato politropa: relazione massa raggio]
 \begin{equation}
@@ -356,9 +357,9 @@ R\propto M\expy{(1-n)/(3-n)}
 
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.49\textwidth} \centering \includegraphics[trim={0 12cm 0 0},clip, width=0.95\textwidth]{RfreqPl100ub} 
-\label{fig:RfreqPl100ub}\subcaption{Distribuzione per i pianeti osservati tramite transito con $P<\SI{100}{\day}$: la valle a $1.7\mearth{}$ si ipotizza causato dall'evaporazione. Da \cite{fulton2017california}.} \end{subfigure}
+\label{fig:RfreqPl100ub}\caption{Distribuzione per i pianeti osservati tramite transito con $P<\SI{100}{\day}$: la valle a $1.7\mearth{}$ si ipotizza causato dall'evaporazione. Da \cite{fulton2017california}.} \end{subfigure}
 ~
-\begin{subfigure}[b]{0.49\textwidth} \centering\includegraphics[trim={0cm 2.5cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{Rfreq}\label{fig:Rfreq}\subcaption{Distribuzione radiale pianeti rivelati tramite T. Da \cite{exoplanet.eu} (luglio 2018): la frequenza ha andamento crescente verso pianeti di raggio terrestre, andamento piatto tra $4-10\rearth{}$ e picco a $R\approx\rjupiter{}$.}
+\begin{subfigure}[b]{0.49\textwidth} \centering\includegraphics[trim={0cm 2.5cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{Rfreq}\label{fig:Rfreq}\caption{Distribuzione radiale pianeti rivelati tramite T. Da \cite{exoplanet.eu} (luglio 2018): la frequenza ha andamento crescente verso pianeti di raggio terrestre, andamento piatto tra $4-10\rearth{}$ e picco a $R\approx\rjupiter{}$.}
 \end{subfigure}
 \end{figure}
 
