raffinamenti per aggiungere o limare??

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 %openany
 
 %% rimuove workout errata dalla versione da consegnare
-\def\versione{bozza}%%VERSIONE
+\def\versione{consegna}%%VERSIONE
 \def\bozza{bozza}
 \def\consegna{consegna}
 %%%PENALITIES
@@ -101,10 +101,12 @@
 \begin{errata}[primo pianeta attorno a stella singola solare di sequenza]
 Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi di formazione dei sistemi planetari tramite modelli di formazione globale: 
 I modelli di formazione planetaria fino alla scoperta del primo esopianeta (Queloz 1995) erano vincolati a riprodurre le caratteristiche peculiari del sistema
-\end{errata}
 La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata determinata sulla base dell'architettura orbitale del sistema solare e della composizione chimica solare, dei pianeti e dei corpi minori.
+\end{errata}
+
 % (\cite{lissauer1993planet}).
-A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono stata sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari.
+L'ipotesi di formazione del sistema solare passando dallo stadio di nebulosa planetaria ha radici storiche che risalgono a prima dell'osservazione di stelle giovani e dell'interpretazione dello spettro di luce che da loro proviene. Con l'accumularsi delle osservazioni l'ipotesi di formazione attraverso disco protoplanetario \'e stata confermata: la prima verifica a cui sono state sottoposte le teorie di formazione \'e il Sistem solare.
+A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono stata sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari: \'e possibile una verifica dei meccanismi di formazione che prescinda dalle condizioni particolari di un singolo sistema.
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Vincoli ai modelli di formazione planetaria}
