--- a/seminario.bib
+++ b/seminario.bib
@@ -199,6 +199,17 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{hayashi1981structure,
+  title={Structure of the solar nebula, growth and decay of magnetic fields and effects of magnetic and turbulent viscosities on the nebula},
+  author={Hayashi, Chushiro},
+  journal={Progress of Theoretical Physics Supplement},
+  volume={70},
+  pages={35--53},
+  year={1981},
+  publisher={Oxford University Press}
+}
+
+
 @article{mordasini2009extrasolar,
   title={Extrasolar planet population synthesis-I. Method, formation tracks, and mass-distance distribution},
   author={Mordasini, Christoph and Alibert, Yann and Benz, Willy},
