--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -3,7 +3,7 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Sistema solare}
 }
-Il sistema solare \'e il punto di partenza delle teorie di formazione planetaria. Infatti si hanno informazioni accurate sui pianeti e loro orbite e sulla popolazione di corpi minori, si hanno anche riferimenti temporali tramite analisi chimica dei meteoriti.
+Il sistema solare \'e il punto di partenza delle teorie di formazione planetaria. Infatti si hanno informazioni accurate sui pianeti e loro orbite e sulla popolazione di corpi minori, si hanno anche riferimenti temporali tramite analisi chimica di campioni di roccia.
 
 L'et\'a del sole \'e definita come tempo in sequenza principale; tecniche eliosismologiche determinano un'et\'a di \SI{4.57+-0.11}{\giga\year} mentre l'analisi chimica dei meteoriti \SI{4.57+-0.07}{\giga\year}.
 La Terra si \'e formata completamente circa \SI{100}{\mega\year} dopo i meteoriti.
@@ -12,7 +12,13 @@ La Terra si \'e formata completamente circa \SI{100}{\mega\year} dopo i meteorit
 \includegraphics[trim={0cm 5cm 0 0cm},clip, width=0.9\textwidth]{Snebuladensity}\caption{Andamento minimum mass solar nebula (MMSN). Da \cite{weidenschilling1977distribution}.}\label{fig:Snebuladensity}
 \end{figure}
 
-Per stimare la massa del disco protoplanetario \cite{weidenschilling1977distribution} ha considerato la massa presente nei pianeti e nella fascia asteroidale arricchita di H/He per avere composizione solare: distribuendo questa massa in un anello di spessore proporzionale al raggio di Hill e centrato sulle orbite si ha l'andamento della densit\'a superficiale mostrato in figura \ref{fig:Snebuladensity}: $\Sigma\propto r\expy{-3/2}$.
+Per stimare la massa del disco protoplanetario \cite{weidenschilling1977distribution} ha considerato la massa presente nei pianeti e nella fascia asteroidale arricchita di H/He per avere composizione solare: distribuendo questa massa in un anello di spessore proporzionale al raggio di Hill e centrato sulle orbite si ha l'andamento della densit\'a superficiale mostrato in figura \ref{fig:Snebuladensity}. \cite{hayashi1981structure} ha determinato l'andamento della densit\'a di gas, ghiaccio e rocce:
+%$\Sigma\propto r\expy{-3/2}$.
+\begin{align}
+&\Sigma_{rock}=7.1(\frac{a}{\si{\astronomicalunit}})\expy{-3/2}\si{\gram\per\square\cm}:\ \frac{a}{\si{\astronomicalunit}}=0.35-2.7\\
+&\Sigma_{rock+ice}=30(\frac{a}{\si{\astronomicalunit}})\expy{-3/2}\si{\gram\per\square\cm}:\ \frac{a}{\si{\astronomicalunit}}=2.7-36\\
+&\Sigma_{gas}=\num{e3}(\frac{a}{\si{\astronomicalunit}})\expy{-3/2}\si{\gram\per\square\cm}:\ \frac{a}{\si{\astronomicalunit}}=0.35-36
+\end{align}
 
 \begin{workout}[accrescimento di gas su nucleo solido prevede arricchimento di metalli ]
 
@@ -194,6 +200,7 @@ dove $\sigma$ tiene conto errori strumentali e rumore stellare.
 \end{errata}
 Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
 
+%Detection probability cumming 2004
 La probabilit\'a di rivelamento \'e determinata dall'ampiezza del moto radiale della stella attorno al centro di massa K, il rumore strumentale e stellare, la durata dell'osservazione e la forma dell'orbita.
 
 \begin{figure}[!ht]
@@ -299,27 +306,43 @@ wright 09: multiplanet system tend to havelower eccentricity,
 Limbach turner 14: $e_m\propto N\expy{-1.2}$.
 planet around metal rich star have higher e (dawson, murray-clay 13)
 smaller planets tend to have lower e (hogg 10 raccomanded modelling e distro on basis of Bayesian analysis)
-\end{workout}
+\end{workout}f
 
-\cleardoublepage
+\clearpage
 
 \section{Popolazione esopianeti rilevati tramite transito}
 
 Le osservabili sono la differenza di luminosit\'a durante il transito, la durata totale e di massima occultazione del transito, e il periodo: da questi \'e possibile ricavare $R_p$, a, i, $R_*$, $M_*$ facendo uso della relazione massa raggio appropriata per la fase evolutiva della stella, per stelle di sequenza principale
 \begin{equation}
-R_*=M_*\expy{0.8}
+\frac{R_*}{\rsun{}}=(\frac{M_*}{\msun{}})\expy{0.8}
 \end{equation}
 
 La probabilit\'a che l'orbita di un pianeta sia allineata con l'osservatore in maniera da avere un transito \'e:
 \begin{align*}
 &p=(\frac{R_*\pm R_p}{a})(\frac{1}{1-e^2})=0.005(\frac{R_*}{\rsun{}})(\frac{a}{1AU})\expy{-1}(\frac{1}{1-e^2})
 \end{align*}
-La maggiore probabilit\'a di transito per orbite eccentriche \'e compensata approssimativamente dalla minore durata del transito.
-Considerando un numero totale di osservazioni $N_o$ durante il transito si hanno $N_t\approx N_o\frac{R_*}{\pi a}$; il rapport segnale rumore \'e $S/N=\sqrt{N_t}\frac{\delta}{\sigma}$, $\sigma$ precisione fotometrica e $\delta=(\frac{R_p}{R_*})^2$. Per $\sigma\propto\frac{1}{\sqrt{N_{ph}}}$ \'e $\sigma\propto d$. Per fissato S/N e tipo stellare il numero di pianeti rivelati varia come volume a cui \'e estesa la ricerca per probabilit\'a di transito:
+La maggiore probabilit\'a di transito per orbite eccentriche \'e compensata approssimativamente dalla minore probabilit\'a di rilevamento per la minor durata del transito.
+Considerando un numero totale di osservazioni $N_o$ durante il transito si hanno $N_t\approx N_o\frac{R_*}{\pi a}$; il rapport segnale rumore \'e $S/N=\sqrt{N_t}\frac{\delta}{\sigma}$, $\sigma$ precisione fotometrica e $\delta=(\frac{R_p}{R_*})^2$. Per osservazione limitata da statistica fotoni $\sigma\propto\frac{1}{\sqrt{N_{ph}}}\propto d$: fissato S/N (e tipo stellare) il numero di pianeti rivelati varia come volume a cui \'e estesa la ricerca per probabilit\'a di transito:
 \begin{equation}
 V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{equation}
 
+\begin{figure}[!ht]
+\begin{subfigure}[b]{0.47\textwidth}
+\centering
+\includegraphics[trim={0cm 22cm 0 0},clip, width=0.95\textwidth]{freqvsRpl50d}
+\caption{Distribuzione raggi planetari: crescita esponenziale verso piccoli raggi. La regione barrata indica misure incomplete. Da \cite{howard2012planet}.}\label{fig:howard2012planet}
+\end{subfigure}
+~
+\begin{subfigure}[b]{0.5\textwidth} \centering\includegraphics[trim={0cm 0.5cm 0 0},clip, keepaspectratio,width=0.99\textwidth]{probvsR-T}\caption{Distribuzione radiale pianeti rivelati tramite T. Da \cite{exoplanet.eu} (luglio 2018): la frequenza ha andamento crescente verso pianeti di raggio terrestre, andamento piatto tra $4-10\rearth{}$ e picco a $R\approx\rjupiter{}$.}\label{fig:probvsR-T}
+\end{subfigure}
+\end{figure}
+
+La figura (\subref{fig:howard2012planet}) mostra distribuzione radiale corretta per probabilit\'a di transito; a fianco la distribuzione dei raggi planetarii aggiornata a Luglio 2018 (\subref{fig:Rfreq}). 
+%\begin{align*}
+%&\TDy{\log{R}}{f}=k_RR\expy{\alpha}\\
+%&k_R=2.9_{-0.4}^{+0.5},\ \alpha=-1.92\pm0.11
+%\end{align*}
 
 \begin{wrapfigure}[21]{l}{0.61\textwidth}
 \centering \includegraphics[trim={0cm 12cm 0 0},clip, width=0.6\textwidth]{MR-model-obs}
@@ -335,7 +358,7 @@ la relazione massa raggio \'e
 R\propto M\expy{(1-n)/(3-n)}
 \end{equation}
 per $M\approx\mjupiter$ $n\approx1$ quindi il raggio \'e approssimativamente costante. Questo fatto \'e visibile anche nella distribuzione dei raggi planetari (figura \subref{fig:Rfreq}) nel picco attorno a $\rjupiter$.
-La figura \subref{fig:RfreqPl100ub} mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$: i pianeti terrestri sono rocciosi con atmosfera di H/He che non contribuisce alle dimensione mentre i pianeti nettuniani hanno strato di gas consistente rispetto alla massa del pianeta.
+La figura \subref{fig:RfreqPl100ub} mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$: i pianeti rocciosi hanno atmosfera di H/He che non contribuisce alle dimensione mentre i pianeti nettuniani hanno strato di gas consistente rispetto alla massa del pianeta. La valle a $1.7\rearth{}$ potrebbe essere il raggio di separazione tra pianeti terrestri con atmosfera tenue di H/He soggetta a evaporazione e pianeti nettuniani con massa consistente di H/He.
 
 \begin{errata}[Equazione di stato politropa: relazione massa raggio]
 \begin{equation}
@@ -357,9 +380,12 @@ R\propto M\expy{(1-n)/(3-n)}
 
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.49\textwidth} \centering \includegraphics[trim={0 12cm 0 0},clip, width=0.95\textwidth]{RfreqPl100ub} 
-\label{fig:RfreqPl100ub}\caption{Distribuzione per i pianeti osservati tramite transito con $P<\SI{100}{\day}$: la valle a $1.7\mearth{}$ si ipotizza causato dall'evaporazione. Da \cite{fulton2017california}.} \end{subfigure}
+\caption{Distribuzione per i pianeti osservati tramite transito con $P<\SI{100}{\day}$: la valle a $1.7\mearth{}$ si ipotizza causato dall'evaporazione. Da \cite{fulton2017california}.}\label{fig:RfreqPl100ub}\end{subfigure}
 ~
-\begin{subfigure}[b]{0.49\textwidth} \centering\includegraphics[trim={0cm 2.5cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{Rfreq}\label{fig:Rfreq}\caption{Distribuzione radiale pianeti rivelati tramite T. Da \cite{exoplanet.eu} (luglio 2018): la frequenza ha andamento crescente verso pianeti di raggio terrestre, andamento piatto tra $4-10\rearth{}$ e picco a $R\approx\rjupiter{}$.}
+\begin{subfigure}[b]{0.47\textwidth}
+\centering
+\includegraphics[trim={0cm 19cm 0 0},clip,width=0.95\textwidth]{freqperstarvsPanfit}
+\caption{Distribuzione dei periodi orbitali raggruppate per diversi raggi planetari: indicato il diverso periodo critico a cui si ha drastica diminuzione nella distribuzione planetaria. Da \cite{howard2012planet}.}\label{fig:freqperstarvsPanfit}
 \end{subfigure}
 \end{figure}
 
