--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -41,19 +41,21 @@ D'altra parte la forza viscosa agente sulla molecola \'e
 \begin{equation}
 F_{visc,x}=\TDy{y}{\sigma_{xy}}\approx\TDof{y}(\eta\TDy{y}{v_x})
 \end{equation}
-con $\eta=\rho\nu$.
 %PRIM'ORDINE IN \lambda/L
 Dalle equazioni precedenti si ha che
 \begin{equation}
-\exv{u_iu_j}=-\nu\TDy{x_j}{v_i}
+\exv{u_iu_j}=-\nu\TDy{x_j}{v_i}\label{eq:molvisccorr}
 \end{equation}
+con $\eta=\rho\nu$.
 
-Per un disco di densit\'a superficiale $\Sigma(r,t)$, dotato del campo di velocit\'a $(u_r,r\Omega+u_{\phi})$, con $v_k=\omega r$, scrivo le equazioni di conservazione di massa e la componente azimutale dell'equazione del moto
+Scrivo le equazioni di conservazione di massa e la componente azimutale dell'equazione del moto
 \begin{align}
 &\PDy{t}{\Sigma}+\frac{1}{r}\PDof{r}(r\Sigma v_r)=0\\
 &\Sigma(\PDy{t}{v_{\phi}}+v_r\PDy{r}{v_{\phi}}\frac{v_rv_{\phi}}{r})=0
 \end{align}
-da cui segue l'equazione del momento angolare
+dove $v_r$, $v_{\phi}$ sono componenti radiale e azimutale del campo di velocit\'a.
+
+Per un disco di densit\'a superficiale $\Sigma(r,t)$, dotato del campo di velocit\'a $(u_r,r\Omega+u_{\phi})$, dalle equazioni precedenti segue l'equazione del momento angolare:
 \begin{equation}
 \PDof{t}[r\Sigma(r\Omega+u_{\phi})]+\frac{1}{r}\PDof{r}[r^2\Sigma(r\Omega+u_{\phi})u_r]=0
 \end{equation}
@@ -61,27 +63,35 @@ Trascuro la fluttuazione azimutale nel termine di derivata temporale e considero
 \begin{equation}
 \PDof{t}r^2\Sigma\Omega+\frac{1}{r}\PDof{r}[r^3\Sigma\Omega\exv{u_r}+\Sigma r^2\exv{u_ru_{\phi}}]=0
 \end{equation}
-da confronto con l'equazione \eqref{eq:fluidmotion} la precedente rappresenta un fluido viscoso di velocit\'a $\vec{v}=(u_r,\Omega r)$ tensore degli stress $\sigma_{r\phi}=-\Sigma\exv{u_ru_{\phi}}$.
+%\vec{v}=(u_r,\Omega r)
+In analogia all'equazione \eqref{eq:molvisccorr} si definisce
+\begin{equation}
+\sigma_{r\phi}=-\Sigma\exv{u_ru_{\phi}}=\Sigma\nu r \TDy{r}{\Omega}
+\end{equation}
 
 Nei modelli di disco di accrescimento unidimensionali si parametrizza il trasporto di momento angolare ponendo $\nu=\alpha c_s H$ dove $\alpha$ \'e parametro da fissare, $c_s$ la velocit\'a del suono e H lo spessore del disco:
 \begin{equation}
 \PDy{t}{\Sigma}=3\frac{1}{r}\PDof{r}[r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]\label{eq:sigmaevol}
 \end{equation}
 
-La struttura verticale \'e determinata dalla componente lungo z dell'attrazione del corpo centrale:
+La struttura verticale \'e determinata dalla componente lungo z dell'attrazione del corpo centrale
 %profilo termico determinato da equilibrio termico
 \begin{equation}
 \TDy{z}{P}=-\rho g_z=-\frac{GM_*}{r^2+z^2}\frac{z}{r}\rho=-\Omega^2\rho z
 \end{equation}
-mentre la struttura radiale:
+mentre la struttura radiale del disco di gas \'e determinata dall'equilibrio idrostatico
 \begin{equation}
 \frac{v_g^2}{r}=\frac{GM_*}{r^2}+\frac{1}{\rho}\TDy{r}{P}
 \end{equation}
-Per piccole deviazioni dalla velocit\'a kepleriana si ha
-\begin{equation}
-v_k-v_g\approx -v_k\frac{1}{\rho}\TDy{r}{P}/(2g)\label{eq:velocitykg}
-\end{equation}
-con $g=GM_*/r^2$.
+dove ho introdotto $v_g$ velocit\'a a cui il gas orbita attorno alla stella centrale.
+
+\begin{workout}[Profilo densit\'a verticale disco isotermo]
+Thin vertically isothermal disk
+\begin{align}
+&\rho(z)=\frac{\Sigma}{h\sqrt{2\pi}}\exp{-\frac{z^2}{2h^2}}
+&
+\end{align}
+\end{workout}
 
 \begin{workout}[Profilo termico del disco]
 
@@ -302,15 +312,24 @@ Planetary formation scenario revisited: CA vs GI (2007)
 
 \section{Sedimentazione polvere e formazione planetesimi}
 
-La polvere presente nel materiale interstellare ha dimensioni di \SI{0.1}{\micro\meter} sedimenta verso il centro del disco e forma aggregati di dimensioni maggiori.
+La polvere presente nel materiale interstellare ha dimensioni di \SI{0.1}{\micro\meter}: l'evoluzione del disco di polvere \'e determinata da attrazione della stella centrale e drag del gas.
+
+%Assumo  sedimenta verso il centro del disco e forma aggregati di dimensioni maggiori: 
+\begin{workout}[Succo beamer formazione]
+Per piccole deviazioni dalla velocit\'a kepleriana si ha
+\begin{equation}
+v_k-v_g\approx -v_k\frac{1}{\rho}\TDy{r}{P}/(2g)\label{eq:velocitykg}
+\end{equation}
+con $g=GM_*/r^2$.
+\end{workout}
 
 L'equazione del moto per particella di polvere \'e
 \begin{equation}\label{eq:motiondust}
-m_p\TDy{t}{v_z}=F_D-m_p\Omega^2z
+m_p\TDy{t}{\vec{v}}=\vec{F}_D-m_p\Omega^2z\hat{z}
 \end{equation}
 $F_D$ \'e la forza esercitata dal gas sulla particella di polvere
 \begin{equation}
-F_D=-\frac{1}{2}C_D\pi s^2\rho_gv^2_z
+F_D=-\frac{1}{2}C_D\pi s^2\rho_gv^2
 \end{equation}
 nel caso cammino libero medio delle molecole di gas sia maggiore delle dimensioni della particella $C_D=\frac{8}{3}\frac{v_{th}}{v_z}$ (Epstein drag) per particelle pi\'u grandi \'e funzione del numero di Reynold.
 %La pressione non supporta i grani: troppo pesanti
@@ -325,7 +344,7 @@ v_{set}=\frac{\Omega^2}{v_{th}}\frac{\rho_d}{\rho_g(z)}sz
 Per particelle di \SI{1}{\micro\meter} tempo di sedimentazione \'e $\SI{2e5}{\year}$, inoltre turbolenza e coagulazione delle particelle hanno un ruolo non banale.
 %t=mv/F
 
-La velocit\'a relativa tra gas e polvere (equazione \eqref{eq:velocitykg}) causa un drift verso la stella di quest'ultima massimo per particelle di \SIrange{0.01}{10}{\meter}  a \SI{1}{\astronomicalunit} con tempo caratteristico di \SI{100}{\year} (\cite{lissauer1993planet}) per cui la materia solida che forma i planetesimi deve crescere rapidamente oltre \SI{10}{\meter}.
+La velocit\'a relativa tra gas e polvere causa un drift verso la stella di quest'ultima massimo per particelle di \SIrange{0.01}{10}{\meter}  a \SI{1}{\astronomicalunit} con tempo caratteristico di \SI{100}{\year} (\cite{lissauer1993planet}).
 
 Per passare a corpi di dimensioni kilometriche si ipotizzano 2 scenarii:
 \begin{itemize}
