--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -338,7 +338,7 @@ V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{subfigure}
 \end{figure}
 
-La figura (\subref{fig:howard2012planet}) mostra distribuzione radiale corretta per probabilit\'a di transito; a fianco la distribuzione dei raggi planetarii aggiornata a Luglio 2018 (\subref{fig:Rfreq}). 
+La figura (\subref{fig:howard2012planet}) mostra distribuzione radiale corretta per probabilit\'a di transito; a fianco la distribuzione dei raggi planetarii aggiornata a Luglio 2018. 
 %\begin{align*}
 %&\TDy{\log{R}}{f}=k_RR\expy{\alpha}\\
 %&k_R=2.9_{-0.4}^{+0.5},\ \alpha=-1.92\pm0.11
@@ -357,7 +357,7 @@ la relazione massa raggio \'e
 \begin{equation}
 R\propto M\expy{(1-n)/(3-n)}
 \end{equation}
-per $M\approx\mjupiter$ $n\approx1$ quindi il raggio \'e approssimativamente costante. Questo fatto \'e visibile anche nella distribuzione dei raggi planetari (figura \subref{fig:Rfreq}) nel picco attorno a $\rjupiter$.
+per $M\approx\mjupiter$ $n\approx1$ quindi il raggio \'e approssimativamente costante. Questo fatto \'e visibile anche nella distribuzione dei raggi planetari (figura \subref{fig:probvsR-T}) nel picco attorno a $\rjupiter$.
 La figura \subref{fig:RfreqPl100ub} mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$: i pianeti rocciosi hanno atmosfera di H/He che non contribuisce alle dimensione mentre i pianeti nettuniani hanno strato di gas consistente rispetto alla massa del pianeta. La valle a $1.7\rearth{}$ potrebbe essere il raggio di separazione tra pianeti terrestri con atmosfera tenue di H/He soggetta a evaporazione e pianeti nettuniani con massa consistente di H/He.
 
 \begin{errata}[Equazione di stato politropa: relazione massa raggio]
