proto disk models from SED

--- a/rawdata.tex
+++ b/rawdata.tex
@@ -1,3 +1,23 @@
+\begin{filecontents}{ophiuchus.txt}
+name            M    gamma      Rc      H100
+  AS 205       8*10-8     23    0.005
+  Elias 24     2*10-7     62    0.03
+  GSS 39       7*10-8     95    0.03
+  AS 209       9*10-8     61    0.08
+  DoAr 25      3*10-9     39    0.0005
+  WaOph 6      1*10-7     78    0.05
+  VSSG 1       1*10-7     16    0.02
+  SR 4         6*10-8     10    0.02
+  SR 13        3*10-9     13    0.0005
+  WSB 52       4*10-9     13    0.001
+  DoAr 33      3*10-10    20    0.0006
+  WL 18        9*10-9     7     0.003
+  SR 24 S      3*10-8     19    (0.006)
+  SR 21       $<2*10-9$    9     (<0.0009)
+  WSB 60       1*10-9     15    (0.0002)
+  DoAr 4.4     9*10-9     40    (0.01)
+\end{filecontents}
+
 \begin{filecontents}{CZvsZ.txt}
 ZX RCZ YCZ Y0
 {-} {0.713\pm0.001} {0.2485\pm0.0034} {0.273\pm0.006}
