--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Funzioni per questo file main
 \usepackage{mathOp}
 \usepackage{LocalF}
-\usepackage{ads}
+%\usepackage{ads}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \raggedbottom %http://tex.stackexchange.com/questions/102084/annoying-paragraph-spacing-issue-with-memoir
 %% CAption subcaption figure %%% captionsetup
