--- a/seminario.bib
+++ b/seminario.bib
@@ -199,6 +199,18 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{andrews2010protoplanetary,
+  title={Protoplanetary disk structures in Ophiuchus. II. Extension to fainter sources},
+  author={Andrews, Sean M and Wilner, DJ and Hughes, AM and Qi, Chunhua and Dullemond, CP},
+  journal={The Astrophysical Journal},
+  volume={723},
+  number={2},
+  pages={1241},
+  year={2010},
+  publisher={IOP Publishing}
+}
+
+
 @article{hayashi1981structure,
   title={Structure of the solar nebula, growth and decay of magnetic fields and effects of magnetic and turbulent viscosities on the nebula},
   author={Hayashi, Chushiro},
