isofote/SED and fraction star with protopla disk

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -2,11 +2,15 @@
 \chapter{Disco protoplanetario}
 }
 
+
 Il materiale presente nella regione instabile di una nube molecolare \'e dotato di momento angolare quindi accresce sulla massa della protostella centrale formando un disco ortogonale al momento totale della nube che trascurando l'effetto della pressione del gas, ruota con velocit\'a angolare kepleriana.
 
+%Jansky=10-23erg/(s*cm2*Hz)
 \begin{workout}[Refs dischi protoplanetari]
 Chronology of  early stages: apai lauretta 10 (book)
 \end{workout}
+
+\vspace{0.2\textheight}
 
 \section{Modello disco di accrescimento}
 
@@ -91,7 +95,7 @@ dove ho introdotto $v_g$ velocit\'a a cui il gas orbita attorno alla stella cent
 
 \begin{wrapfigure}[16]{l}{0.5\textwidth}
 \includegraphics[trim={0cm 19cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{diskdensity}
-\caption{Densit\'a superficiale dischi protplanetari osservati nella regione di Ophiuchus ricavata risolvendo modello disco di accrescimento che riproduca densit\'a spettrale di energia osservata. Da \cite{andrews2010protoplanetary}.}\label{fig:diskdensity}
+\caption{Densit\'a superficiale dischi protoplanetari osservati nella regione di Ophiuchus ricavata risolvendo modello disco di accrescimento che riproduca densit\'a spettrale di energia osservata. Da \cite{andrews2010protoplanetary}.}\label{fig:diskdensity}
 \end{wrapfigure}
 
 Se $\nu\propto r\expy{\gamma}$ una soluzione di \eqref{eq:sigmaevol} per $t=0$ \'e
@@ -100,7 +104,23 @@ Se $\nu\propto r\expy{\gamma}$ una soluzione di \eqref{eq:sigmaevol} per $t=0$ \
 \end{equation}
 \cite{andrews2010protoplanetary} hanno osservato lo spettro emesso da oggetti nella regione di formazione stellare Ophiuchus determinando massa, dimensioni caratteristiche e viscosit\'a: $M_d=0.004-0.143\msun{}$, $\gamma=0.4-1.1$, $R_c=\SIrange{14}{198}{\astronomicalunit}$.
 
-Il tempo caratteristico dei dischi protoplanetari, determinato misurando l'eccesso infrarosso in ammassi di et\'a diversa, \'e \SI{2.5}{\mega\year}. La massa del disco \'e ottenuta tramite fit con spettro osservato di un modello di disco.
+
+
+\begin{figure}[!ht]
+\begin{subfigure}[b]{0.47\textwidth}
+\centering
+\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{SED-contours}
+\caption{Regioni di flusso omogeneo a $\lambda=\SI{880}{\micro\meter}$ e densit\'a spettrale. Da \cite{andrews2010protoplanetary}.}\label{fig:SED-contours}
+\end{subfigure}
+~
+\begin{subfigure}[b]{0.47\textwidth}
+\centering
+\includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{clusterage-fstar}
+\caption{Frazione di stelle con disco protoplanetario in funzione dell'et\'a dell'ammasso. Da \cite{mordasini2018planetary}. }\label{fig:clusterage-fstar}
+\end{subfigure}
+\end{figure}
+
+Attorno alle stelle giovani sovente si trovano strutture che hanno spettro di emissione con eccesso di radiazione infrarossa rispetto a corpo nero: il riprocessamento della luce stellare da parte delle particelle di polvere causa questo fenomeno.
 
 \begin{workout}[Caratteristiche fittate proto-dischi]
 \begin{table}[!ht]
