--- a/seminario.bib
+++ b/seminario.bib
@@ -245,6 +245,17 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@inproceedings{mamajek2009initial,
+  title={Initial conditions of planet formation: lifetimes of primordial disks},
+  author={Mamajek, Eric E},
+  booktitle={AIP Conference Proceedings},
+  volume={1158},
+  number={1},
+  pages={3--10},
+  year={2009},
+  organization={AIP}
+}
+
 @article{alibert2005models,
   title={Models of giant planet formation with migration and disc evolution},
   author={Alibert, Yann and Mordasini, Christoph and Benz, Willy and Winisdoerffer, Christophe},
