--- a/seminario.bib
+++ b/seminario.bib
@@ -245,6 +245,17 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{haisch2001disk,
+  title={Disk frequencies and lifetimes in young clusters},
+  author={Haisch Jr, Karl E and Lada, Elizabeth A and Lada, Charles J},
+  journal={The Astrophysical Journal Letters},
+  volume={553},
+  number={2},
+  pages={L153},
+  year={2001},
+  publisher={IOP Publishing}
+}
+
 @inproceedings{mamajek2009initial,
   title={Initial conditions of planet formation: lifetimes of primordial disks},
   author={Mamajek, Eric E},
